chore: add AI coding tools to Brewfile

--- a/home/dot_config/brew/Brewfile
+++ b/home/dot_config/brew/Brewfile
@@ -67,6 +67,10 @@ brew "talosctl"     # Talos Linux CLI
 brew "docker"
 brew "docker-buildx"
 
+# === AI Coding Tools ===
+brew gemini-cli
+brew codex
+
 # === Cloud Tools ===
 brew "doctl"        # DigitalOcean CLI
 brew "cloudflared"  # Cloudflare tunnel
