Fix: typo in Brewfile: ghosty to ghostty

--- a/home/dot_config/brew/Brewfile
+++ b/home/dot_config/brew/Brewfile
@@ -130,7 +130,7 @@ cask "visual-studio-code"
 cask "firefox"
 cask "discord"
 cask "iterm2"
-cash "ghosty"
+cash "ghostty"
 
 # === Fonts ===
 cask "font-fira-code-nerd-font"
